[Feat] imp Pokemon detail

--- a/PokemonGuider/Supporting Files/en.lproj/Localizable.strings
+++ b/PokemonGuider/Supporting Files/en.lproj/Localizable.strings
@@ -11,3 +11,13 @@
 "my_profile" = "My Profile";
 
 "to_be_continuted" = "To be continuted";
+
+"own" = "Own it";
+
+"stat" = "Stat";
+
+"stat_base" = "Base";
+
+"stat_effort" = "Effort";
+
+"evolution" = "Evolution";
